@@ -189,10 +189,10 @@ public class Respriter {
             boolean invalidSize = targetFrameCount > targetPalettes.size();
             if (originalFrameCount != 1 || invalidSize) {
                 if (invalidSize) {
-                    Moonlight.crashIfInDev("Respriter was given less palettes than needed!");
+                    Moonlight.crashIfInDev("Respriter tried to generate a texture with more frames than the given palettes which were also >1. The 2 must match");
                 }
                 //it means original image is animated. Just use first palette given
-                Color2ColorMap singleColorMap = Color2ColorMap.create(originalPalette, targetPalettes.get(0));
+                Color2ColorMap singleColorMap = Color2ColorMap.create(originalPalette, targetPalettes.getFirst());
 
                 return (frameIndex, color) -> singleColorMap.mapColor(color);
             } else {
